--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason's Page</title>
+    <link rel="stylesheet" href="./styles.css" class="stylesheet">
 </head>
 <body>
-    <h1>My name is Jason Pham</h1>
-    <h3>Home Town: Norfolk, Virginia</h3>
-    <h3>School: University of Virginia</h3>
-    <ul>3rd year Engineering School</ul>
-    <h3>Hobbies:</h3>
-        <ul>
+    <div >
+        <h1 id="title">My name is Jason Pham</h1>
+        <h3>Home Town: Norfolk, Virginia</h3>
+        <h3>School: University of Virginia</h3>
+        <p>3rd year Engineering School</p>
+    </div>
+        <ul class = "bullet" style="float: left">
+            <h3 style="color: blue">Hobbies:</h3>
             <li>Tennis</li>
             
             <li>Anime</li>
@@ -24,18 +27,19 @@
                 </ul>
             </div>
         </ul>
-    <h3>Pets: Mary (Age 2)</h3>
-    <div>
-        <img src="https://cdn.discordapp.com/attachments/745705550427455530/1223667435262050456/72652248655__FA4FDB98-D86A-432F-8439-DD79F2013119.jpg?ex=661ab01b&is=66083b1b&hm=b1ddfbe26580c287c59396f1bcdb428528fdc06804d01a8d4ec98453aa9fc328&" 
-        width="300" >
-    </div>
-    <div>
-        <h3>Favorite Foods</h3>
+    <div class="bullet" style="float: right">
+        <h3 style="color: blue">Favorite Foods</h3>
         <ul>
             <li>Sushi</li>
             <li>Pasta</li>
             <li>Any noodle dish</li>
         </ul>
+    </div>    
+    <div style="text-align: center;">
+        <h3>Pets: Mary (Age 2)</h3>
+            <img src="https://cdn.discordapp.com/attachments/745705550427455530/1223667435262050456/72652248655__FA4FDB98-D86A-432F-8439-DD79F2013119.jpg?ex=661ab01b&is=66083b1b&hm=b1ddfbe26580c287c59396f1bcdb428528fdc06804d01a8d4ec98453aa9fc328&" 
+            width="300" >
     </div>
+    
 </body>
 </html>
